# PYTHON-LEARNING

./: 100_Questions.ipynb  1stday.py  BMI_Calculator(if).py  BMI_calculator.py  BasicCalculator.ipynb  Basic_Game.ipynb  CountDown.ipynb  Guess_num(computer).ipynb  Guess_num(user).ipynb  HangMan.ipynb  Mad_lid_python.ipynb  PIAIC253607.ipynb  PIAIC_253607.ipynb  Password_Generator.ipynb  R_P_S.ipynb  Text_game(st).py  Text_game.py  Toss.py  countdown_timer.py  growth_mindset.py  guess_the_num(computer).py  guess_the_num(user).py  hangman.py  mad_lids_python.py  password_generator.py  password_strenght_checker.py  rock,paper,scissor.py  unit_converter.py
COMC_Seller/data_app/: pyproject.toml
COMC_Seller/data_app/src/data_app/: __init__.py  main.py  script.py
Data_Sweeper/: app.py
Message_Formatter/: README.md  desktop.ini  main.py  pyproject.toml
Message_Formatter/src/message_formatter/: Msg_decorater.py  __init__.py
Sales_Dashboard/dashborad/: pyproject.toml
Sales_Dashboard/dashborad/src/dashborad/: __init__.py  app.py  script.py
testing git/: readme.md
