[project]
name = "message-formatter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Usman GM", email = "muhammadusman75425965etc@gamil.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
message-formatter = "message_formatter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
